Fix wraping on desktop

--- a/css/style.css
+++ b/css/style.css
@@ -167,7 +167,6 @@ article#best-sellers hr {
   padding: 0 8px;
   display: flex;
   justify-content: space-around;
-  flex-wrap: wrap;
 }
 
 .product {
